# 247csa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  pyproject.toml  run.py
.github/workflows/: deploy.yml
247csa/: asgi.py  celery.py  routing.py  settings.py  tasks.py  urls.py  wsgi.py
247csa-mirror.git/: config  packed-refs
247csa-mirror.git/info/: refs
UserProfile/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
UserProfile/migrations/: 0001_initial.py
ai/: ai_open_ai.py  openai_assistant.py  services.py  urls.py  views.py
assistant/: facebook_messenger.py  models.py  serializers.py  twilio_client.py  urls.py  views.py  whatsapp.py
assistant/migrations/: 0001_initial.py  0002_rename_snippet_email_body_alter_email_sender_and_more.py
authentication/: urls.py  views.py
chatui/: READme.md  apps.py  urls.py  views.py
csa/: models.py  project_map.md  serializers.py  tests.py  urls.py  views.py
csa/migrations/: 0001_initial.py  0002_csa_firebase_path.py  0003_alter_csa_firebase_path.py  0004_csa_knowledge_text.py  0005_csa_status.py  0006_csa_default_handling_mode.py  0007_csa_teams.py
dashboard/: models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
docker/celery/: entrypoint.sh
docker/flower/: flower.conf
docker/mysql/: init.sql  my.cnf
docker/nginx/: nginx.conf
email_utility/: admin.py  models.py
email_utility/migrations/: 0001_initial.py  0002_alter_useremailconfiguration_options_and_more.py  (+6 more)
faq_management/: READme.md  apps.py  models.py  urls.py  views.py
home/: views.py
interaction/: models.py  urls.py  views.py
mycrm/: mixins.py  models.py  urls.py  views.py
platform_connections/: README.md  apps.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
settings/: urls.py  views.py
task/: models.py  urls.py  views.py
team/: TeamObjectBase.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
templates/: base.html
test/: test_openai.py
tickets/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
(+135 files in other folders)
