[tool.poetry]
name = "247csa"
version = "0.1.0"
description = "247CSA Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"  
django = "^5.0.2"
celery = "^5.3.6"
redis = "^5.0.1"
mysqlclient = "^2.2.1"
gunicorn = "^21.2.0"
flower = "^2.0.1"
django-environ = "^0.11.2"
social-auth-app-django = "^5.4.2"
pillow = "^11.1.0"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.157.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 